--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,28 +1,26 @@
 <div class="flex  justify-center h-screen">
-    <form (ngSubmit)="login()" class="p-4 rounred-lg border m-auto w-1/3">
+    <form (ngSubmit)="login()" class="p-4 rounred-lg border m-auto w-1/3" #myForm="ngForm">
         <h1 class="text-center text-xl">login</h1>
         <div class="my-5 w-full">
             <label for="email">Email </label>
-            <input type="email" 
-                id="email" 
-                name="email" 
-                class="p-2 rouned w-full border" 
-                placeholder="Email Addrees" 
-                [(ngModel)]="form.email" 
-                #email="ngModel">
+            <input type="email" id="email" name="email" class="p-2 rouned w-full border" placeholder="Email Addrees"
+                [(ngModel)]="form.email" #email="ngModel">
         </div>
         <div class="my-5 w-full">
             <label for="password">Password</label>
-            <input type="password" 
-                id="password" 
-                name="password" 
-                class="p-2 rouned w-full border" 
-                placeholder="Password" 
-                [(ngModel)]="form.password" 
-                #password="ngModel">
+            <input type="password" id="password" name="password" class="p-2 rouned w-full border" placeholder="Password"
+                [(ngModel)]="form.password" #password="ngModel">
         </div>
         <div class="my-5 w-full">
-           <input type="submit" class="p-2 w-full bg-purple-700 text-white hover:bg-purple-900  rouned w-full" >
+            <button type="submit" [disabled]="myForm.form.invalid"
+                class="p-2 w-full bg-purple-700 text-white hover:bg-purple-900  rouned w-full">
+                <ng-container *ngIf="isLoading()">
+                    Loading ...
+                </ng-container>
+                <ng-container *ngIf="!isLoading()">
+                    Login
+                </ng-container>
+            </button>
         </div>
     </form>
 </div>
