--- a/src/app/books/book/book.component.html
+++ b/src/app/books/book/book.component.html
@@ -1,9 +1,17 @@
-<li >
-    <img [src]="book.src"
-     [alt]="book.name" width="100"
-    />
-    <p class="title">{{ book.name | titlecase}} by {{ book.author | titlecase}}</p>
-    <p class="currency">{{ book.amount | currency:'DZD' }}</p>
-    <button (click)="addToCard()" *ngIf="!isInCart"> Add to Card</button>
-    <button (click)="removeToCard()" *ngIf="isInCart"> Remove to Card</button>
+<li class="flex flex-row gap-x-3 rounded-md shadow-lg p-4">
+    <div>
+        <img [src]="book.src"
+        [alt]="book.name" width="100"
+       />
+    </div>
+    <div class="flex flex-col justify-evenly">
+        <div>
+            <p class="text-lg font-semibold tracking-wide ">{{ book.name | titlecase}} by {{ book.author | titlecase}}</p>
+            <p class="text-slate-400">{{ book.amount | currency:'DZD' }}</p>
+        </div>
+        <div>
+            <button class="bg-green-400 text-white p-2 rounded-md" (click)="addToCard()" *ngIf="!isInCart"> Add to Card</button>
+            <button class="bg-orange-300 text-white p-2 rounded-md" (click)="removeToCard()" *ngIf="isInCart"> Remove to Card</button>
+        </div>
+    </div>
 </li>
